# SnakeNGA

./: CMakeLists.txt  Makefile  README.md
include/: agent.h  board.h  fruit.h  game.h  gamemode.h  genetic.h  menu.h  neural.h  player.h  position.h  rng.h  snake.h
src/: agent.cpp  board.cpp  fruit.cpp  game.cpp  genetic.cpp  main.cpp  menu.cpp  neural.cpp  player.cpp  rng.cpp  snake.cpp
